Fixed card overflow bug
The issue was fixed by increasing width of
the autofit columns generated by Grid, so that
the boxes dont overflow with their shadows and
they flex more flexibly.

Minor fix: fixed title of the page

--- a/styles.css
+++ b/styles.css
@@ -233,7 +233,7 @@ li:hover {
 
 .content-cards {
     display: grid ;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     justify-items: center;
     gap: 40px;
 }
